# NextCppShot

./: .gitignore  CMakeLists.txt
.github/workflows/: build-win98.yml  build.yml
res/: resources.rc.in
src/: main.cpp
src/gui/: Gui.cpp  Gui.h  renderer.cpp  renderer.h  renderer_dx10.cpp  renderer_dx11.cpp  renderer_dx12.cpp  renderer_dx9.cpp  renderer_opengl2.cpp  renderer_opengl3.cpp  renderer_vulkan.cpp
src/images/: CompositeScreenshot.cpp  CompositeScreenshot.h  Screenshot.cpp  Screenshot.h
src/windows/: BackdropWindow.cpp
